--- a/.env.example
+++ b/.env.example
@@ -32,12 +32,10 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
-ADDRESS=
-PHONE=
-FAX=
-MAIL_BOX=
-POSTCODE=
-URL=
+C0PYRIGHT=
+WEB_DESCRIPTION=
+KEY_WORD=
+WEB_TITLE=
 
 APP_ID=1254019048
 SECRET_ID=AKIDHRSHuLTbR4VlZJHdE5kKiuukhR2ReOmx
