--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,16 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "doctrine/dbal": "^2.5",
         "intervention/image": "^2.4",
         "jingling0101/laravel-qcloud-cos": "^1.0",
         "laravel/framework": "5.4.*",
+        "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "socialiteproviders/qq": "^3.0",
+        "socialiteproviders/weixin": "^4.0",
+        "spatie/laravel-backup": "^4.19"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
